--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -25,6 +25,13 @@ td > input {
   width: 60px;
 }
 
+th > span{
+  cursor: pointer;
+}
+th > span:hover{
+  font-weight: 600;
+}
+
 .form-select-sm {
   width: 100px;
 }
