--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -13,57 +13,57 @@
                 </mat-expansion-panel-header>
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/slau']">
+                    <mat-card-header routerLink="/slau">
                         <mat-card-subtitle i18n="Subtitle" >Slaugther 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/jp3']">
+                    <mat-card-header routerLink="/jp3">
                         <mat-card-subtitle i18n="Subtitle">Jackson & Pollock 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/dw4']">
+                    <mat-card-header routerLink="/dw4">
                         <mat-card-subtitle i18n="Subtitle">Durnin & Wormersley 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/sloan2']">
+                    <mat-card-header routerLink="/sloan2">
                         <mat-card-subtitle i18n="Subtitle">SLOAN (1967) 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/guedes3']">
+                    <mat-card-header routerLink="/guedes3">
                         <mat-card-subtitle i18n="Subtitle">Guedes 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/pb4']">
+                    <mat-card-header routerLink="/pb4">
                         <mat-card-subtitle i18n="Subtitle">Petroski (1995) Brasileiros 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/carter']">
+                    <mat-card-header routerLink="/carter">
                         <mat-card-subtitle i18n="Subtitle">Carter 6 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/jp7']">
+                    <mat-card-header routerLink="/jp7">
                         <mat-card-subtitle i18n="Subtitle">Jackson & Pollock 7 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/wb2']">
+                    <mat-card-header routerLink="/wb2">
                         <mat-card-subtitle i18n="Subtitle">Wilmore Behnke 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/wb3']">
+                    <mat-card-header routerLink="/wb3">
                         <mat-card-subtitle i18n="Subtitle">Wilmore Behnke 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/will']">
+                    <mat-card-header routerLink="/will">
                         <mat-card-subtitle i18n="Subtitle">Williams (1992) 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
@@ -76,18 +76,18 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/balanca']">
+                    <mat-card-header routerLink="/balanca">
                         <mat-card-subtitle i18n="Subtitle">Balança</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/scaner']">
+                    <mat-card-header routerLink="/scaner">
                         <mat-card-subtitle i18n="Subtitle">SCANER</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
             <mat-expansion-panel>
-                <mat-expansion-panel-header [routerLink]="['/dexa']">
+                <mat-expansion-panel-header routerLink="/dexa">
                     <mat-panel-title i18n="Title">
                         DEXA
                     </mat-panel-title>
@@ -102,18 +102,23 @@
                 </mat-expansion-panel-header>
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/tw']">
-                        <mat-card-subtitle i18n="Subtitle">TRAN & Weltman</mat-card-subtitle>
+                    <mat-card-header routerLink="/tw">
+                        <mat-card-subtitle i18n="Subtitle">Tran & Weltman</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/deur']">
-                        <mat-card-subtitle i18n="Subtitle">Deuremberg</mat-card-subtitle>
+                    <mat-card-header routerLink="/wst">
+                        <mat-card-subtitle i18n="Subtitle">Weltman Seip & Tran</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/welt']">
+                    <mat-card-header routerLink="/welt">
                         <mat-card-subtitle i18n="Subtitle">Weltman</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/metal">
+                        <mat-card-subtitle i18n="Subtitle">Mayhew et al</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
