--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -9,12 +9,12 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].dt_avaliacao | date:'dd-LL-yyyy'}}
+                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
                         </th>
-                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].dt_avaliacao | date:'dd-LL-yyyy'}}
+                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}
                         </th>
                         <th class="th-top" *ngIf="addEval">
-                            <input name="dt_avaliacao" #dt_avaliacao="ngModel" [(ngModel)]="newEvaluation.dt_avaliacao"
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data"
                                 type="date" style="width: 110px;">
                         </th>
                     </tr>
