--- a/src/app/avaliation/antropometria/weltman/weltman.component.html
+++ b/src/app/avaliation/antropometria/weltman/weltman.component.html
@@ -1,123 +1,108 @@
 <div class="container">
     <div class="header">
         <h3>Weltman (1988)</h3>
-    </div> 
+    </div>
     <div class="section">
-     <form #f="ngForm" (submit)="save(f.value)">
-         <table>
-             <thead>
-                 <tr>
-                     <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">
-                        <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
-                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
-                        </button>
-                    </th>
-                    <th class="th-top" *ngIf="pointer>=0">
-                        <button type="button" (click)="setEvaluation(evaluation[pointer])">
-                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
-                        </button>
-                    </th>
-                     <th class="th-top" *ngIf="addEval">
-                         <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                             style="width: 110px;">
-                     </th>
-                 </tr>
-             </thead>
-             <tbody>
-                <tr>
-                    <th>Abdominal</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].abdomen}}</td>
-                    <td *ngIf="addEval">
-                        <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
-                            type="number" step="0.1">
-                    </td>
-                </tr>
-                <tr>
-                    <th>Quadril</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].quadril}}</td>
-                    <td *ngIf="addEval">
-                        <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril"
-                            type="number" step="0.1">
-                    </td>
-                </tr>
-                 <tr>
-                     <th><span>IMC</span></th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].imc}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].imc}}</td>
-                     <td *ngIf="addEval">&nbsp;</td>
-                 </tr>
-                 <tr>
-                     <th>Idade</th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].idade}}</td>
-                     <td *ngIf="pointer>=0">{{evaluation[pointer].idade}}</td>
-                     <td *ngIf="addEval">&nbsp;</td>
-                 </tr>
-
-                <tr>
-                    <th><span>Peso</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
-                    <td *ngIf="addEval">&nbsp;</td>
-                </tr>
+        <form #f="ngForm" (submit)="save(f.value)">
+            <table>
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer-1])">
+                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="setEvaluation(evaluation[pointer])">
+                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Abdominal</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdomen}}</td>
+                        <td *ngIf="addEval">
+                            <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Altura</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].altura}}</td>
+                        <td *ngIf="addEval">
+                            <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th><span>Peso</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
                 </tbody>
-         </table>
- 
-         <div class="action">
-             <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
-                 (click)="pointer=pointer-1">
-                 <mat-icon class="mat-14">chevron_left</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                 <mat-icon class="mat-18">add</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                 color="default" (click)="pointer=pointer+1">
-                 <mat-icon class="mat-14">chevron_right</mat-icon>
-             </button>
-             <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                 <mat-icon class="mat-18">close</mat-icon>
-             </button>
-             <button *ngIf="addEval" mat-fab>
-                 <mat-icon class="mat-18">check</mat-icon>
-             </button>
-         </div>
-     </form>
-     <br />
-     <hr />
-     <h4 style="text-align: center; color: blue;">
-         {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
-     </h4>
-     <div *ngIf="showChart">
-     <div style="text-align: center; color: blue;">
-         <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small> :  </mat-label>
-         <mat-slider min="10" max="30" step="1" thumbLabel="true"  [(ngModel)]="gorduraDesejada" [disabled]="!fatChanged"
-             (change)="getNewEvaluation()">
-         </mat-slider>
-         <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
-             <mat-icon>edit</mat-icon>
-         </button>
-         <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
-             <mat-icon>save</mat-icon>
-         </button>
-     </div>
-     
-         <app-chart-pie [values]="single"></app-chart-pie>
-         <app-chart-pie [values]="single2"></app-chart-pie>
-     </div>
+            </table>
 
- </div>
- 
- <div class="footer">
- <a mat-mini-fab color="primary" (click)="goBack()">
- <mat-icon>undo</mat-icon>
- </a>
- </div>
- </div>
- 
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+        <br />
+        <hr />
+        <h4 style="text-align: center; color: blue;">
+            {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
+        </h4>
+        <div *ngIf="showChart">
+            <div style="text-align: center; color: blue;">
+                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
+                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                </mat-slider>
+                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </div>
 
+            <app-chart-pie [values]="single"></app-chart-pie>
+            <app-chart-pie [values]="single2"></app-chart-pie>
+        </div>
 
+    </div>
 
-
+    <div class="footer">
+        <a mat-mini-fab color="primary" (click)="goBack()">
+            <mat-icon>undo</mat-icon>
+        </a>
+    </div>
+</div>
