--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.scss
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.scss
@@ -1,30 +1,4 @@
-  .main{
-      width: 100%;
-      height: 75%;
-      position: absolute;
-      bottom: 8%;
-      display: flex;
-      flex-direction: column-reverse;
-      left: 50%;
-      transform: translate(-50%,0);
-      overflow: auto;
-      mat-expansion-panel{
-        background-color: rgba(245, 241, 241, 0.704);
-        border-radius: 4px;
-      }
-      
-      mat-expansion-panel-body {
-        padding: 0;
-      }
 
-    .mat-card{
-        height: 30px;
-      //  background-color: rgba(14, 13, 13, 0.904);
-        margin-bottom: 1px;
-       
-    }
-
-  }
   table{
     width: 100%;
   }
@@ -55,10 +29,22 @@
 
   }
 
+  .flex-select{
+    width: 90px;
+  }
+
   .sub-line{
       font-weight: 500;
       color: blue;
   }
 
-
+.images{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+img{
+  width: 90%;
+  
+}
   
