--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     }
   }
 
+.sub-line{
+  color: blue;
+  font-weight: 600;
+}
   
 @media only screen and (min-width: 768px) {
   /* For desktop: */
